--- a/spring boot microservice/gpay-micro-service/gpay-micro-service/src/main/resources/application.properties
+++ b/spring boot microservice/gpay-micro-service/gpay-micro-service/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 spring.application.name=gpay-micro-service
 server.port=8484
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=sa
+spring.datasource.password=test
+spring.jpa.hibernate.ddl-auto=update 
+spring.h2.console.enabled=true
 
